--- a/style .css
+++ b/style .css
@@ -85,6 +85,9 @@ article {
   margin-right: 20px;
   width: 250px;
 }
+.art-content {
+  margin-left: 1rem;
+}
 .title {
   font-size: 1.3rem;
   font-weight: bolder;
@@ -103,6 +106,7 @@ article {
   flex-direction: row;
   justify-content: space-between;
   gap: 2rem;
+  padding-bottom: 2rem;
 }
 .card {
   box-shadow: -5px 5px 15px 5px grey;
@@ -133,4 +137,68 @@ article {
   color: wheat;
   padding: 50px;
   text-align: center;
+}
+/* media quiries */
+/* @media9768px<width<992) */
+@media (max-width: 992px) {
+  .global-msg {
+    background: none;
+  }
+}
+@media (max-width: 768px) {
+  .global-msg {
+    background: red;
+    display: block;
+  }
+}
+/* mobile 768px ipad 900px */
+@media (max-width: 900px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .side-links,
+  .main-content {
+    width: 100%;
+  }
+  .read-by-date,
+  .read-by-country {
+    width: 43%;
+    margin-bottom: 1rem;
+  }
+  .side-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+/* @media (768px<900px) */
+@media (max-width: 768px) {
+  article {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .img-img {
+    width: 100%;
+  }
+  .side-links {
+    display: block;
+    flex-direction: column;
+  }
+  .read-by-date,
+  .read-by-country {
+    width: 100%;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
